# InboxOS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  supabase-release.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-23.jsonl  turns-2026-04-23.jsonl
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml  railway.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py
apps/api/app/integrations/: google_workspace.py  openai_compatible.py
apps/api/app/integrations/llm/: base.py  openai_compatible.py
apps/api/app/integrations/mail/: base.py  mailcore_adapter.py
apps/api/app/routers/: __init__.py  accounts.py  auth.py  calendar.py  gmail.py  health.py  sync.py  tasks.py  threads.py
apps/api/app/schemas/: auth.py  calendar.py  common.py  sync.py  task.py  thread.py
apps/api/app/services/: action_service.py  auth_service.py  dependencies.py  gmail_mailbox_service.py  id_factory.py  sync_service.py  task_service.py  thread_analysis_service.py  thread_service.py
apps/api/app/storage/: auth_store.py  conversation_store.py  gmail_mailbox_store.py  mailbox_cache.py  store.py  task_store.py
apps/api/tests/: conftest.py  test_accounts.py  test_config.py  test_flow.py  test_gmail_action_views.py  test_google_integration.py  test_health.py  test_task_store.py  test_thread_analysis_service.py
apps/web/: Dockerfile  (+5 more)
docs/: README.md  prd.md  rfc.md
scripts/: deploy-branch.sh
supabase/: config.toml  seed.sql
(+32 files in other folders)
