[project]
name = "inboxos-api"
version = "0.1.0"
description = "InboxOS MVP FastAPI service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "ruff>=0.12.10,<1.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]
ignore = ["B008"]
